--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@700&display=swap');
-body {
+#page-auth {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
-    margin: 0 25%;
+    margin:  0%;
     background-color: antiquewhite;
 }
 
@@ -16,7 +17,7 @@ main {
 
 h1 {
     font-family: 'Agdasima', sans-serif;
-    font-size: 55px;
+    font-size: 60px;
 }
 .botaoLogin {
     width: 250px;
