--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    background: #f8f8f8;
-    color: #0c4b80;
+    background: antiquewhite;
+    color: #0C4B80;
 }
 
 body, input, button, textarea {
