--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Agdasima:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 /* header */
 header {
@@ -58,7 +58,7 @@ header {
 }
 
 /* main */
-.gerente {
+.funcao {
   display: flex;
   align-items: start;
   padding-top: 0%;
@@ -78,13 +78,13 @@ header {
   font-size: 45px;
 }
 
-.avaliacoes-pendentes-link {
+.avaliacoes-pendentes-links {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-a {
+.avaliacoes-pendentes-links-link {
   display: flex;
   align-items: center;
   justify-content: left;
@@ -107,11 +107,30 @@ a:hover {
 
 .barra-lateral {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   height: 100vh;
   flex: 0.7;
   padding: 1% 0%;
 
-  font-family: 'Poppins', sans-serif;
+  color: aliceblue;
+  background-color: #0c4b80;
+  font-family: "Poppins", sans-serif;
   border-right: 0.1px solid #a7a7a7;
+
+  gap: 10px;
+}
+
+.barra-lateral-link {
+  text-align: center;
+  padding: 5% 5%;
+  background-color: #e4252f;
+  color: aliceblue;
+  text-decoration: none;
+  border-radius: 5px;
+  min-width: 387px;
+}
+
+.barra-lateral-link:hover{
+  opacity: 0.9;
 }
